fix(core): z-index bug

--- a/src/scss/custom/_navscroll.scss
+++ b/src/scss/custom/_navscroll.scss
@@ -92,7 +92,6 @@
     left: 0;
     right: 0;
     top: auto;
-    z-index: 10;
   }
   // top position
   &.it-top-navscroll {
